# bsc-informatik-fh-ost

./: .gitignore  README.md
algorithms-and-datastructures/notes/: lecture-1.md  lecture-10.md  lecture-11.md  lecture-12.md  lecture-13.md  lecture-14.md  lecture-3.md  lecture-4.md  lecture-5.md  lecture-6.md  lecture-7.md  lecture-8.md  lecture-9.md
compiler-construction/notes/: 01-intro.md  02-lexikalische-analyse.md
cpp/: READMe.md
cpp/assigments/01-calculator/: CMakeLists.txt
cpp/assigments/01-calculator/app/: PocketcalculatorApp.cpp
cpp/assigments/01-calculator/lib/: Calc.cpp  Calc.hpp  Pocketcalculator.cpp  Pocketcalculator.hpp  Sevensegment.cpp  Sevensegment.hpp
cpp/assigments/01-calculator/tests/: PocketcalculatorTest.cpp
cpp/assigments/02-kwic/: CMakeLists.txt
cpp/assigments/02-kwic/app/: main.cpp
cpp/assigments/02-kwic/lib/: Kwic.cpp  Kwic.hpp  Word.cpp  Word.hpp
cpp/assigments/02-kwic/test/: tests.cpp
cpp/notes/: 01-intro.md  02-values-streams.md  03-sequences-and-iterators.md  04-functions-exceptions.md  05-classes-operators.md  06-namespaces-enums.md  07-stl-containers-iterators.md  08-stl-algorithms.md  09-function-templates.md  10-class-templates.md  11-dynamic-heap-memory-management.md  12-dynamic-polymorphism.md  13-initialization-and-aggregates.md
data-engineering/: README.md
data-engineering/notes/: lecture-01.md  lecture-02.md  lecture-03.md  lecture-04.md  lecture-05.md  lecture-06.md  lecture-07.md  lecture-08.md  lecture-09.md  lecture-10.md  lecture-11.md
database-systems-1/: .gitignore  README.md
database-systems-1/notes/: lecture-1.md  lecture-10.md  lecture-11.md  lecture-12.md  lecture-13.md  lecture-14.md  lecture-2.md  lecture-3.md  lecture-4.md  lecture-5.md  (+4 more)
operating-systems-1/: .gitignore  README.md
parallel-programming/: README.md
(+64 files in other folders)
